put the storage_type back in here since im not going to do what was previously mentioned just yet. maybe i can pull it off using express?

--- a/config.json
+++ b/config.json
@@ -7,5 +7,6 @@
 	"port": 8080,
 	"startup_count": 25,
 	"storage_fingerprint": "",
-	"storage_secret": ""
+	"storage_secret": "",
+	"storage_type": "memory"
 }
