--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
 	"oauth_key": "",
 	"oauth_key_sitestream": false,
 	"oauth_secret": "",
+	"googl_key": "",
 	"imgur_key": "",
 	"klout_key": "",
 	"port": 8080,
