--- a/config.json
+++ b/config.json
@@ -3,7 +3,9 @@
 	"oauth_key_sitestream": false,
 	"oauth_secret": "",
 	"googl_key": "",
+	"host": "",
 	"imgur_key": "",
+	"oauth_callback": "/oauth/callback",
 	"port": 8080,
 	"startup_count": 25,
 	"storage_fingerprint": "",
