more serverside changes, start work on the sitestream code. this is very untested and you should _NOT_ use sitestreams, seriously - this is merely the "scaffolding" from what appears in the api docs.
other minor changes as well.

--- a/config.json
+++ b/config.json
@@ -1,6 +1,8 @@
 {
-	"oauth_key": "",
 	"oauth_key_sitestream": false,
+	"oauth_access_key_sitestream": false,
+	"oauth_access_secret_sitestream": false,
+	"oauth_key": "",
 	"oauth_secret": "",
 	"googl_key": "",
 	"host": "",
