--- a/config.json
+++ b/config.json
@@ -11,6 +11,5 @@
 	"port": 8080,
 	"startup_count": 25,
 	"storage_fingerprint": "",
-	"storage_secret": "",
-	"storage_type": "memory"
+	"storage_secret": ""
 }
