drop socket.io-client from libs.js (include it in home.jade, change some settings around for sockets to allow for production / developement settings just like express does. also change some config.json stuff around to make more sense right off the bat (eg, ignore redis_* vars if you are using memory to store sessions). additional serverside sanity.

--- a/config.json
+++ b/config.json
@@ -9,12 +9,12 @@
 	"imgur_key": "",
 	"oauth_callback": "oauth/callback",
 	"port": 8080,
+	"redis_host": "127.0.0.1 or maybe even /tmp/redis.sock",
+	"redis_name": "user",
+	"redis_pass": "pass",
+	"redis_port": 6379,
 	"startup_count": 20,
 	"storage_fingerprint": "",
-	"storage_host": "",
-	"storage_name": "",
-	"storage_pass": "",
-	"storage_port": 0,
 	"storage_secret": "",
 	"storage_type": "memory"
 }
